chore: .htaccess.example update

--- a/.htaccess.example
+++ b/.htaccess.example
@@ -1,2 +1,12 @@
+# remove php ext
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.php -f
+RewriteRule ^(.*)$ $1.php [L]
+
+#remove html ext
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^(.*)$ $1.html [L]
+
 SetEnv AUTH_TOKEN a
 SetEnv API_CLIENT b
